--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://wwucs.github.io/main.css" />
   </head>
   <body>
+    <section>
     
       <h1 id="wwu-cs-slack-community-code-of-conduct">WWU CS Slack Community Code of Conduct</h1>
 <h2 id="our-pledge">Our Pledge</h2>
@@ -69,5 +70,6 @@ members of the community's leadership.</p>
 available at <a href="https://www.contributor-covenant.org/version/1/4/code-of-conduct.html">https://www.contributor-covenant.org/version/1/4/code-of-conduct.html</a></p>
 
     
+    </section>
   </body>
 </html>
