--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://wwucs.github.io/main.css" />
   </head>
   <body>
+    <section>
     
   
   <h1 id="wwu-cs-slack-community">WWU CS Slack Community</h1>
@@ -21,5 +22,6 @@ officially affiliated with Western Washington University Computer Science.</p>
 <p>Here is our <a href="/code-of-conduct">code of conduct</a>.</p>
 
 
+    </section>
   </body>
 </html>
